[package]
name = "tokio-socks5"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
log = "0.3"
futures = { git = "https://github.com/alexcrichton/futures-rs" }
futures-cpupool = { git = "https://github.com/alexcrichton/futures-rs" }
tokio-core = { git = "https://github.com/tokio-rs/tokio-core" }
env_logger = "0.3"

[dev-dependencies]
curl = "0.3"
