[package]
name = "tokio-socks5"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
log = "0.3"
futures = { git = "https://github.com/alexcrichton/futures-rs", branch = "new-poll" }
futures-cpupool = { git = "https://github.com/alexcrichton/futures-rs", branch = "new-poll" }
tokio-core = { git = "https://github.com/tokio-rs/tokio-core", branch = "new-poll" }
env_logger = "0.3"

[dev-dependencies]
curl = "0.3"
